# snake_game

./: .gitignore  CMakeLists.txt  README.md  build.sh
inc/: game.h
src/: game.cpp  input.cpp  main.cpp  render.cpp
